gke/gke-expose-services/istio/hello-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello
  namespace: default
spec:
  selector:
    matchLabels:
      run: hello
  replicas: 2
  template:
    metadata:
      labels:
        run: hello
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: IfNotPresent
        name: hello
        ports:
        - containerPort: 8080
          protocol: TCP
