gke/gke-expose-services/istio/hello-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello2
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: hello2
